--- a/vignettes/dataRetrieval.Rnw
+++ b/vignettes/dataRetrieval.Rnw
@@ -91,6 +91,39 @@ For information on getting started in R and installing the package, see Appendix
 %------------------------------------------------------------ 
 In this section, we will run through 5 examples, documenting how to get raw data from the web. This includes site information (\ref{sec:usgsSite}), measured parameter information (\ref{sec:usgsParams}), historical daily values(\ref{sec:usgsDaily}), real-time (unit) values (\ref{sec:usgsRT}), and water quality data (\ref{sec:usgsWQP}) or (\ref{sec:usgsSTORET}). We will use the Choptank River near Greensboro, MD as an example.  The site-ID for this gage station is 01491000. Daily discharge measurements are available as far back as 1948.  Additionally, forms of nitrate have been measured dating back to 1964. The functions/examples in this section are for raw data retrieval.  This may or may not be the easiest data to work with.  In the next section, we will use functions that retrieve and process the data in a dataframe that may prove more friendly for R analysis.
 
+\newpage
+Quick workflow example:
+<<workflow, echo=TRUE,eval=TRUE>>=
+library(dataRetrieval)
+# Site ID for Choptank River near Greensboro, MD
+siteNumber <- "01491000" 
+ChoptankInfo <- getSiteFileData(siteNumber)
+parameterCd <- "00060"
+rawDailyData <- retrieveNWISData(siteNumber,parameterCd,
+                      "1980-01-01","2010-01-01")
+head(rawDailyData)
+Daily <- getDVData(siteNumber,parameterCd,
+                      "1980-01-01","2010-01-01")
+head(Daily)
+ChoptankInfo <- getSiteFileData(siteNumber)
+colnames(ChoptankInfo)
+
+ChoptankAvail <- getDataAvailability(siteNumber)
+head(ChoptankAvail)
+
+parameterCd <- "00618" # Nitrate
+parameterINFO <- getParameterInfo(parameterCd)
+colnames(parameterINFO)
+
+@
+
+\newpage
+
+<<workflow2, echo=TRUE,eval=TRUE>>=
+ChoptankAvail <- getDataAvailability(siteNumber)
+head(ChoptankAvail)
+@
+
 %------------------------------------------------------------
 \subsection{Introduction}
 %------------------------------------------------------------
@@ -648,14 +681,20 @@ To see the raw code for a particular code, type the name of the function:
 removeDuplicates
 @
 
+Additionally, many R packages have vignette files attached (such as this paper). To view the vignette:
+<<seeVignette,eval = FALSE>>=
+vignette(dataRetrieval)
+@
+
+
 %------------------------------------------------------------
 \subsection{R User: Installing dataRetrieval}
 %------------------------------------------------------------ 
 Before installing dataRetrieval, the zoo packages must be installed from CRAN:
 
 <<installFromCran,eval = FALSE>>=
-install.packages("zoo")
-install.packages("dataRetrieval", repos="http://usgs-r.github.com", type="source")
+install.packages(c("zoo","XML","RCurl","plyr"))
+install.packages("dataRetrieval", repos="http://usgs-r.github.com")
 @
 
 It is a good idea to re-start R after installing the package, especially if installing an updated version. Some users have found it necessary to delete the previous version's package folder before installing newer version of dataRetrieval. If you are experiencing issues after updating a package, trying deleting the package folder - the default location for Windows is something like this: C:/Users/userA/Documents/R/win-library/2.15/dataRetrieval, and the default for a Mac: /Users/userA/Library/R/2.15/library/dataRetrieval. Then, re-install the package using the directions above. Moving to CRAN should solve this problem.
