--- a/vignettes/dataRetrieval.Rnw
+++ b/vignettes/dataRetrieval.Rnw
@@ -301,12 +301,12 @@ An example of plotting the above data (Figure \ref{fig:getNWIStemperaturePlot}):
 par(mar=c(5,5,5,5))
 
 with(temperatureAndFlow, plot(
-  datetime, Temperature_water_01,
+  datetime, Temperature_water_degrees_Celsius_Max_01,
   xlab="Date",ylab="Temperature [C]"
   ))
 par(new=TRUE)
 with(temperatureAndFlow, plot(
-  datetime, Stream_flow_mean_daily,
+  datetime, Discharge_cubic_feet_per_second,
   col="red",type="l",xaxt="n",yaxt="n",xlab="",ylab="",axes=FALSE
   ))
 axis(4,col="red",col.axis="red")
